--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -7,8 +7,16 @@
 </head>
 <body>
     <div class="bg-black">
-        <h1 class="heading">sparrow with Dom Learning</h1>
+        <h1 id="title" class="heading">sparrow with Dom Learning <span style="display: none;"> test text</span></h1>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, commodi?</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="pass" id="">
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
     </div>
 </body>
 </html>
